GitHubリンクの追加とスタイルの調整

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <header>
         <h1>AXT-AyaKoto/BPM_measure</h1>
+        <a href="https://github.com/AXT-AyaKoto/BPM_measure" target="_blank" class="github-link">GitHub</a>
     </header>
 
     <main>
