指示セクションのテキストを更新し、クリック/タップでの記録機能を追加

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     </header>
 
     <main>
-        <section class="instructions">
-            <p>スペースで記録、Xでリセット</p>
+        <section class="instructions" id="instructions">
+            <p>スペースまたはここをクリック/タップで記録、Xでリセット</p>
         </section>
 
         <!-- メインBPM表示 -->
